...
        ) {
            Text(text = stringResource(R.string.no_articles))
        }
    } else {
        LazyColumn(
            modifier = modifier
                .testTag("articleList")
                .fillMaxSize(),
            contentPadding = PaddingValues(vertical = 8.dp)
        ) {
            items(articlesToDisplay) { article ->
                ArticleRow(
                    article = article,
...
